[package]
name = "lib-simulation-wasm"
version = "0.1.0"
authors = ["Kristoffer Andersson <kristoffer.andersson@gu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
