[package]
name = "lib-simulation-wasm"
version = "0.1.0"
authors = ["Kristoffer Andersson <kristoffer.andersson@gu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version="0.2", features=["serde-serialize"] }
rand = "0.8"
getrandom = { version="0.2", features=["js"] }
serde = { version="1", features=["derive"] }

lib-simulation = { path="../simulation" }
