[package]
name = "lib-simulation"
version = "0.1.0"
authors = ["Kristoffer Andersson <kristoffer.andersson@gu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
nalgebra = { version = "0.27", features = ["rand-no-std"] }
